--- a/triply-backend/pom.xml
+++ b/triply-backend/pom.xml
@@ -109,6 +109,13 @@
 			<version>24.0.0</version>
 		</dependency>
 
+		<!-- PDF generation for receipts/reports -->
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>2.0.30</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
